--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "dotenv": "^16.3.1",
+    "gh-pages": "^6.0.0",
+    "homepage": "https://github.com/amandajduva/portfolio.git",
     "react": "17.0.2",
     "react-bootstrap": "^2.8.0",
     "react-dom": "17.0.2",
@@ -20,7 +22,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
