--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "bootstrap": "^5.3.1",
     "dotenv": "^16.3.1",
     "gh-pages": "^6.0.0",
-    "homepage": "https://github.com/amandajduva/portfolio.git",
+    "homepage": "https://amandajduva.github.io/portfolio/",
     "react": "17.0.2",
     "react-bootstrap": "^2.8.0",
     "react-dom": "17.0.2",
